# michina-example

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: michina-test.yml
src/: prompts.py
tests/: test_prompts.py
